Support dynamic unique user id field in userinfo response

--- a/lang/en.json
+++ b/lang/en.json
@@ -3,13 +3,15 @@
     "SettingDisableSuperuser": "Disable external login for superusers.",
     "SettingDisableSuperuserHelp": "",
     "SettingAuthenticationName": "Name",
-    "SettingAuthenticationNameHelp": "Name of the authentication source which will be displayed on the login screen",
+    "SettingAuthenticationNameHelp": "Name of the authentication source which will be displayed on the login screen.",
     "SettingAuthorizeUrl": "Authorize URL",
     "SettingAuthorizeUrlHelp": "e.g. https://github.com/login/oauth/authorize",
     "SettingTokenUrl": "Token URL",
     "SettingTokenUrlHelp": "e.g. https://github.com/login/oauth/access_token",
     "SettingUserinfoUrl": "Userinfo URL",
     "SettingUserinfoUrlHelp": "e.g. https://api.github.com/user",
+    "SettingUserinfoId": "Userinfo ID",
+    "SettingUserinfoIdHelp": "Name of the unique user id field in the userinfo response.",
     "SettingClientId": "Client ID",
     "SettingClientIdHelp": "",
     "SettingClientSecret": "Client Secret",
