--- a/lang/en.json
+++ b/lang/en.json
@@ -5,19 +5,19 @@
     "SettingAuthenticationName": "Name",
     "SettingAuthenticationNameHelp": "Name of the authentication source which will be displayed on the login screen.",
     "SettingAuthorizeUrl": "Authorize URL",
-    "SettingAuthorizeUrlHelp": "e.g. https://github.com/login/oauth/authorize",
+    "SettingAuthorizeUrlHelp": "e.g. https://<USERNAME>.eu.auth0.com/authorize",
     "SettingTokenUrl": "Token URL",
-    "SettingTokenUrlHelp": "e.g. https://github.com/login/oauth/access_token",
+    "SettingTokenUrlHelp": "e.g. https://<USERNAME>.eu.auth0.com/oauth/token",
     "SettingUserinfoUrl": "Userinfo URL",
-    "SettingUserinfoUrlHelp": "e.g. https://api.github.com/user",
+    "SettingUserinfoUrlHelp": "e.g. https://<USERNAME>.eu.auth0.com/userinfo",
     "SettingUserinfoId": "Userinfo ID",
-    "SettingUserinfoIdHelp": "Name of the unique user id field in the userinfo response.",
+    "SettingUserinfoIdHelp": "Name of the unique user id field in the userinfo response. Usually for OpenID Connect services like auth0 this is 'sub'. Github provides the user id in 'id'.",
     "SettingClientId": "Client ID",
     "SettingClientIdHelp": "",
     "SettingClientSecret": "Client Secret",
     "SettingClientSecretHelp": "",
     "SettingScope": "OAuth Scopes",
-    "SettingScopeHelp": "",
+    "SettingScopeHelp": "e.g. openid",
     "OpenIDConnect": "OpenID Connect",
     "OIDCIntro": "This allows you to sign in using an external authentication service",
     "AccountLinked": "Your account is currently linked (Remote User ID: %1$s).",
