--- a/lang/en.json
+++ b/lang/en.json
@@ -11,7 +11,7 @@
         "SettingUserinfoUrl": "Userinfo URL",
         "SettingUserinfoUrlHelp": "e.g. https://<USERNAME>.eu.auth0.com/userinfo",
         "SettingUserinfoId": "Userinfo ID",
-        "SettingUserinfoIdHelp": "Name of the unique user id field in the userinfo response. Usually for OpenID Connect services like auth0 this is 'sub'. Github provides the user id in 'id'.",
+        "SettingUserinfoIdHelp": "Name of the unique user id field in the userinfo response. Usually for OpenID Connect services like Auth0 this is 'sub'. Github provides the user id in 'id'.",
         "SettingClientId": "Client ID",
         "SettingClientIdHelp": "",
         "SettingClientSecret": "Client Secret",
@@ -19,7 +19,7 @@
         "SettingScope": "OAuth Scopes",
         "SettingScopeHelp": "e.g. openid",
         "OpenIDConnect": "OpenID Connect",
-        "OIDCIntro": "This allows you to sign in using an external authentication service",
+        "OIDCIntro": "This allows you to sign in using an external authentication service.",
         "AccountLinked": "Your account is currently linked (Remote User ID: %1$s).",
         "AccountNotLinked": "Your account is currently not linked.",
         "Link": "Link account",
