--- a/lang/de.json
+++ b/lang/de.json
@@ -1,5 +1,5 @@
 {
-    "LoginOIDC":{
+    "LoginOIDC": {
         "SettingDisableSuperuser": "Deaktiviere externen Login-Service für Superuser.",
         "SettingDisableSuperuserHelp": "",
         "SettingAllowSignup": "Erstelle automatisch einen neuen Account, wenn sich ein unbekannter neuer Benutzer einloggt.",
@@ -19,9 +19,9 @@
         "SettingClientSecret": "Client Secret",
         "SettingClientSecretHelp": "",
         "SettingScope": "OAuth Scopes",
-        "SettingScopeHelp": "z.B. openid",
+        "SettingScopeHelp": "z.B. 'openid' oder 'openid email'",
         "SettingRedirectUriOverride": "Benutzerdefinierte Redirect URI",
-        "SettingRedirectUriOverrideHelp": "In manchen Fällen ist es nützlich, die Redirect URI, die an den Provider übergeben wird, zu überschreiben. Bei Unklarheit sollte dieses Feld freigelassen werden.",
+        "SettingRedirectUriOverrideHelp": "In manchen Fällen ist es nützlich, die Redirect URI, die an den OpenID Connect Provider übergeben wird, zu überschreiben. Bei Unklarheit sollte dieses Feld freigelassen werden.",
         "OpenIDConnect": "OpenID Connect",
         "OIDCIntro": "Dies erlaubt es Dir, Dich über einen externen Service bei Matomo einzuloggen.",
         "AccountLinked": "Dein Account ist zur Zeit verknüpft (Entfernte Benutzer-ID: %1$s).",
