--- a/lang/en.json
+++ b/lang/en.json
@@ -1,5 +1,5 @@
 {
-    "LoginOIDC":{
+    "LoginOIDC": {
         "SettingDisableSuperuser": "Disable external login for superusers.",
         "SettingDisableSuperuserHelp": "",
         "SettingAllowSignup": "Create new users when users try to log in with unknown OIDC accounts.",
@@ -21,9 +21,9 @@
         "SettingClientSecret": "Client Secret",
         "SettingClientSecretHelp": "",
         "SettingScope": "OAuth Scopes",
-        "SettingScopeHelp": "e.g. openid",
+        "SettingScopeHelp": "e.g. 'openid' or 'openid email'",
         "SettingRedirectUriOverride": "Redirect URI override",
-        "SettingRedirectUriOverrideHelp": "In some cases it might be useful to manipulate the redirect uri which is given to the provider. If you are unsure, just leave this field empty.",
+        "SettingRedirectUriOverrideHelp": "In some cases it might be useful to manipulate the redirect uri which is given to the OpenID Connect provider. If you are unsure, just leave this field empty.",
         "OpenIDConnect": "OpenID Connect",
         "OIDCIntro": "This allows you to sign in using an external authentication service.",
         "AccountLinked": "Your account is currently linked (Remote User ID: %1$s).",
