--- a/lang/en.json
+++ b/lang/en.json
@@ -1,8 +1,10 @@
 {
     "LoginOIDC": {
-        "SettingDisableSuperuser": "Disable external login for superusers.",
+        "SettingDisableSuperuser": "Disable external login for superusers",
         "SettingDisableSuperuserHelp": "",
-        "SettingAllowSignup": "Create new users when users try to log in with unknown OIDC accounts.",
+        "SettingDisableDirectLoginUrl": "Disable direct login url",
+        "SettingDisableDirectLoginUrlHelp": "When checked, users have to inititate the login via the Matomo login page. Otherwise the login button can be embedded in third-party services.",
+        "SettingAllowSignup": "Create new users when users try to log in with unknown OIDC accounts",
         "SettingAllowSignupHelp": "",
         "SettingBypassTwoFa": "Disable second factor when sign in with OIDC",
         "SettingBypassTwoFaHelp": "",
