--- a/lang/en.json
+++ b/lang/en.json
@@ -30,6 +30,8 @@
         "SettingRedirectUriOverrideHelp": "In some cases it might be useful to manipulate the redirect uri which is given to the OpenID Connect provider. If you are unsure, just leave this field empty.",
         "SettingAllowedSignupDomains": "Restrict user creation to domains",
         "SettingAllowedSignupDomainsHelp": "List of email domains which should be allowed to create new accounts. Multiple domains have to be separated by line breaks. When empty, any email domain will be accepted.",
+        "SettingAutoLogin": "Enables auto login",
+        "SettingAutoLoginHelp": "When checked (and direct login is also enabled), this enables an automatic redirect to the login page of the OpenID Connect Provider, instead of showing the default login page.",
         "OpenIDConnect": "OpenID Connect",
         "OIDCIntro": "This allows you to sign in using an external authentication service.",
         "AccountLinked": "Your account is currently linked (Remote User ID: %1$s).",
