--- a/lang/en.json
+++ b/lang/en.json
@@ -23,7 +23,7 @@
         "SettingUserinfoId": "Userinfo ID",
         "SettingUserinfoIdHelp": "Name of the unique user id field in the userinfo response. Usually for OpenID Connect services like Auth0 this is 'sub'. Github provides the user id in 'id'.",
         "SettingEmailKey": "Email key",
-        "SettingEmailKeyHelp": "Key of the User info object containing the user's email.",
+        "SettingEmailKeyHelp": "Key that specifies the email in the user information.",
         "SettingClientId": "Client ID",
         "SettingClientIdHelp": "",
         "SettingClientSecret": "Client Secret",
